--- a/taskvenue/src/Languages/pl.json
+++ b/taskvenue/src/Languages/pl.json
@@ -2,7 +2,7 @@
 	"language": "język",
     "sign in": "zaloguj się",
     "sign up": "zarejestruj się",
-    "sign in via superlink": "zaloguj się przez magic link", 
+    "sign in via magic link": "zaloguj się przez magic link", 
     "send magic link": "wyślij magic link",
     "enter your email": "wprowadź email",
     "enter your password": "wprowadź hasło",
