--- a/taskvenue/src/Languages/pl.json
+++ b/taskvenue/src/Languages/pl.json
@@ -25,6 +25,10 @@
     "First and last name change": "Zmiana imienia i nazwiska",
     "First and last name": "Imię i nazwisko",
     "Updated!": "Zaktualizowano!",
-    "The password must contain at least 6 characters": "Hasło musi zawierać co najmniej 6 znaków"
+    "The password must contain at least 6 characters": "Hasło musi zawierać co najmniej 6 znaków",
+    "Users": "Użytkownicy",
+    "License": "Licencja",
+    "Settings": "Ustawienia",
+    "Services": "Usługi"
 
 }
