added users view

--- a/taskvenue/src/Languages/en.json
+++ b/taskvenue/src/Languages/en.json
@@ -37,7 +37,11 @@
     "Unit":"Unit",
     "Add":"Add",
     "Delete":"Delete",
-    "Action":"Action"
+    "Action":"Action",
+    "No users":"No users",
+    "Type":"Type",
+    "details":"details",
+    "new":"new"
 
   
 
