--- a/taskvenue/src/Languages/pl.json
+++ b/taskvenue/src/Languages/pl.json
@@ -37,6 +37,10 @@
     "Unit":"Jednostka",
     "Add":"Dodaj",
     "Delete":"Usuń",
-    "Action":"Akcje"
+    "Action":"Akcje",
+    "No users":"Brak userów",
+    "Type":"Typ",
+    "details":"szczegóły",
+    "new":"nowy"
 
 }
