added user update method

--- a/taskvenue/src/Languages/en.json
+++ b/taskvenue/src/Languages/en.json
@@ -48,7 +48,8 @@
     "profile type":"profile type",
     "Register":"Register",
     "description":"description",
-    "password":"password"
+    "password":"password",
+    "User edit":"User edit"
 
   
 
