--- a/taskvenue/src/Languages/pl.json
+++ b/taskvenue/src/Languages/pl.json
@@ -48,7 +48,8 @@
     "profile type":"typ profilu",
     "Register":"Zarejestruj",
     "description":"Opis",
-    "password":"hasło"
+    "password":"hasło",
+    "User edit":"Edycja uzytkownika"
  
 
 }
