added contractors managment

--- a/taskvenue/src/Languages/en.json
+++ b/taskvenue/src/Languages/en.json
@@ -52,7 +52,11 @@
     "User edit":"User edit",
     "Landing...":"Landing...",
     "An error occurred while downloading data.":"An error occurred while downloading data.",
-    "Your license is valid until:":"Your license is valid until:"
+    "Your license is valid until:":"Your license is valid until:",
+    "Contractors":"Contractors",
+    "contact person":"contact person",
+    "National Economy Register ID":"National Economy Register ID",
+    "Tax ID":"Tax ID"
  
 
   
