fixed label problem

--- a/taskvenue/src/Languages/en.json
+++ b/taskvenue/src/Languages/en.json
@@ -56,7 +56,8 @@
     "Contractors":"Contractors",
     "contact person":"contact person",
     "National Economy Register ID":"National Economy Register ID",
-    "Tax ID":"Tax ID"
+    "Tax ID":"Tax ID",
+    "Name or company name":"Imię i nazwisko lub nazwa firmy"
  
 
   
