--- a/taskvenue/src/Languages/pl.json
+++ b/taskvenue/src/Languages/pl.json
@@ -56,7 +56,8 @@
     "Contractors":"Kontrahenci",
     "contact person":"osoba kontaktowa",
     "National Economy Register ID":"REGON",
-    "Tax ID":"NIP"
+    "Tax ID":"NIP",
+    "Name or company name":"Imię i nazwisko lub nazwa firmy"
  
 
 }
