added isBlocked verification

--- a/taskvenue/src/Languages/en.json
+++ b/taskvenue/src/Languages/en.json
@@ -57,7 +57,8 @@
     "contact person":"contact person",
     "National Economy Register ID":"National Economy Register ID",
     "Tax ID":"Tax ID",
-    "Name or company name":"Imię i nazwisko lub nazwa firmy"
+    "Name or company name":"Name or company name",
+    "Blocked":"Zablokowany"
  
 
   
