--- a/taskvenue/src/Languages/pl.json
+++ b/taskvenue/src/Languages/pl.json
@@ -57,7 +57,8 @@
     "contact person":"osoba kontaktowa",
     "National Economy Register ID":"REGON",
     "Tax ID":"NIP",
-    "Name or company name":"Imię i nazwisko lub nazwa firmy"
+    "Name or company name":"Imię i nazwisko lub nazwa firmy",
+    "Blocked":"Zablokowany"
  
 
 }
