added releted kontrahent with user

--- a/taskvenue/src/Languages/en.json
+++ b/taskvenue/src/Languages/en.json
@@ -58,7 +58,8 @@
     "National Economy Register ID":"National Economy Register ID",
     "Tax ID":"Tax ID",
     "Name or company name":"Name or company name",
-    "Blocked":"Zablokowany"
+    "Blocked":"Zablokowany",
+    "Select Contractor":"Select Contractor"
  
 
   
