changed name of location to venues

--- a/taskvenue/src/Languages/en.json
+++ b/taskvenue/src/Languages/en.json
@@ -13,7 +13,7 @@
     "Login successfully completed, check your mailbox": "Login successfully completed, check your mailbox",
     "Profile": "Profile",
     "Administration": "Administration",
-    "Locations": "Locations",
+    "Venues": "Venues",
     "Schedule": "Schedule",
     "Tasks": "Tasks",
     "Reports": "Reports",
