--- a/taskvenue/src/Languages/pl.json
+++ b/taskvenue/src/Languages/pl.json
@@ -13,7 +13,7 @@
     "Login successfully completed, check your mailbox": "Logowanie zakończone sukcesem, sprawdź swoją skrzynkę e-mail",
     "Profile": "Profil",
     "Administration": "Administracja",
-    "Locations": "Lokalizacje",
+    "Venues": "Miejsca",
     "Schedule": "Planowanie",
     "Tasks": "Zadania",
     "Reports": "Raporty",
