--- a/taskvenue/src/Languages/en.json
+++ b/taskvenue/src/Languages/en.json
@@ -63,7 +63,11 @@
     "Copy the ID and deliver to your administrator to add you to the appropriate configuration":"Copy the ID and deliver to your administrator to add you to the appropriate configuration",
     "Copy":"Copy",
     "User ID":"User ID",
-    "your identifier is ":"your identifier is "
+    "your identifier is ":"your identifier is ",
+    "Contractor":"Contractor",
+    "Search by name":"Search by name",
+    "Search by number":"Search by number",
+    "Search by contractor":"Search by contractor"
  
 
   
