added add form regarding new venue

--- a/taskvenue/src/Languages/en.json
+++ b/taskvenue/src/Languages/en.json
@@ -67,7 +67,9 @@
     "Contractor":"Contractor",
     "Search by name":"Search by name",
     "Search by number":"Search by number",
-    "Search by contractor":"Search by contractor"
+    "Search by contractor":"Search by contractor",
+    "name":"name",
+    "Add venue":"Add venue"
  
 
   
