--- a/taskvenue/src/Languages/pl.json
+++ b/taskvenue/src/Languages/pl.json
@@ -67,7 +67,9 @@
     "Contractor":"Kontrahent",
     "Search by name":"Wyszukaj po nazwie",
     "Search by number":"Wyszukaj po numerze",
-    "Search by contractor":"Wyszukaj po kontrahencie"
+    "Search by contractor":"Wyszukaj po kontrahencie",
+    "name":"nazwa",
+    "Add venue":"Dodaj miejsce"
  
 
 }
