fixed probem: none of contractor in ist in user

--- a/taskvenue/src/Languages/pl.json
+++ b/taskvenue/src/Languages/pl.json
@@ -69,7 +69,8 @@
     "Search by number":"Wyszukaj po numerze",
     "Search by contractor":"Wyszukaj po kontrahencie",
     "name":"nazwa",
-    "Add venue":"Dodaj miejsce"
+    "Add venue":"Dodaj miejsce",
+    "Update venue":"Zaktualizuj miejsce"
  
 
 }
