--- a/taskvenue/src/Languages/en.json
+++ b/taskvenue/src/Languages/en.json
@@ -69,7 +69,8 @@
     "Search by number":"Search by number",
     "Search by contractor":"Search by contractor",
     "name":"name",
-    "Add venue":"Add venue"
+    "Add venue":"Add venue",
+    "Update venue":"Update venue"
  
 
   
