added new components regarding tasks

--- a/taskvenue/src/Languages/en.json
+++ b/taskvenue/src/Languages/en.json
@@ -70,7 +70,9 @@
     "Search by contractor":"Search by contractor",
     "name":"name",
     "Add venue":"Add venue",
-    "Update venue":"Update venue"
+    "Update venue":"Update venue",
+    "Open Tasks":"Open Tasks",
+    "Closed Tasks":"Closed Tasks"
  
 
   
