--- a/taskvenue/src/Languages/pl.json
+++ b/taskvenue/src/Languages/pl.json
@@ -70,7 +70,9 @@
     "Search by contractor":"Wyszukaj po kontrahencie",
     "name":"nazwa",
     "Add venue":"Dodaj miejsce",
-    "Update venue":"Zaktualizuj miejsce"
+    "Update venue":"Zaktualizuj miejsce",
+    "Open Tasks":"Otwarte zadania",
+    "Closed Tasks":"Zamknięte zadania"
  
 
 }
