--- a/taskvenue/src/Languages/en.json
+++ b/taskvenue/src/Languages/en.json
@@ -72,7 +72,10 @@
     "Add venue":"Add venue",
     "Update venue":"Update venue",
     "Open Tasks":"Open Tasks",
-    "Closed Tasks":"Closed Tasks"
+    "Closed Tasks":"Closed Tasks",
+    "Basic data":"Basic data",
+    "Venue":"Venue",
+    "Working time":"Working time"
  
 
   
