--- a/taskvenue/src/Languages/en.json
+++ b/taskvenue/src/Languages/en.json
@@ -84,7 +84,8 @@
     "Creation date":"Creation date",
     "Start of implementation":"Start of implementation",
     "Deadline":"Deadlinen",
-    "Settled":"Settled"
+    "Settled":"Settled",
+    "Task":"Task"
   
 
 }
