finished venue component

--- a/taskvenue/src/Languages/en.json
+++ b/taskvenue/src/Languages/en.json
@@ -87,7 +87,8 @@
     "Settled":"Settled",
     "Task":"Task",
     "Address":"Address",
-    "Select Venue":"Select Venue"
+    "Select Venue":"Select Venue",
+    "Open in Google Maps":"Open in Google Maps"
   
 
 }
