--- a/taskvenue/src/Languages/pl.json
+++ b/taskvenue/src/Languages/pl.json
@@ -87,7 +87,8 @@
     "Settled":"Rozliczone",
     "Task":"Zadanie",
     "Address":"Adres",
-    "Select Venue":"Wybierz miejsce"
+    "Select Venue":"Wybierz miejsce",
+    "Open in Google Maps":"Otwórz w Google Maps"
  
 
 }
