added summary to services view

--- a/taskvenue/src/Languages/en.json
+++ b/taskvenue/src/Languages/en.json
@@ -93,7 +93,8 @@
     "Status":"Status",
     "Select service from dictionary":"Select service from dictionary",
     "Total":"Total",
-    "Quantity":"Quantity"
+    "Quantity":"Quantity",
+    "Summary":"Summary"
   
 
 }
