--- a/taskvenue/src/Languages/pl.json
+++ b/taskvenue/src/Languages/pl.json
@@ -93,7 +93,8 @@
     "Status":"Status",
     "Select service from dictionary":"Wybierz usługi ze słownika",
     "Total":"Suma",
-    "Quantity":"Ilośc"
+    "Quantity":"Ilośc",
+    "Summary":"Podsumowanie"
  
 
 }
