--- a/taskvenue/src/Languages/en.json
+++ b/taskvenue/src/Languages/en.json
@@ -100,7 +100,8 @@
     "Time":"Time",
     "Vacation":"Vacation",
     "Disease":"Disease",
-    "Legend":"Legend"
+    "Legend":"Legend",
+    "Task type":"Task type"
   
 
 }
