--- a/taskvenue/src/Languages/pl.json
+++ b/taskvenue/src/Languages/pl.json
@@ -100,7 +100,8 @@
     "Time":"Czas",
     "Vacation":"Urlop",
     "Disease":"Choroba",
-    "Legend":"Legenda"
+    "Legend":"Legenda",
+    "Task type":"Rodzaje zadań"
  
 
 }
