fixed disease to sick leave in schedule

--- a/taskvenue/src/Languages/en.json
+++ b/taskvenue/src/Languages/en.json
@@ -99,7 +99,7 @@
     "Date":"Date",
     "Time":"Time",
     "Vacation":"Vacation",
-    "Disease":"Disease",
+    "Sick leave":"Sick leave",
     "Legend":"Legend",
     "Task type":"Task type"
   
