--- a/taskvenue/src/Languages/pl.json
+++ b/taskvenue/src/Languages/pl.json
@@ -99,7 +99,7 @@
     "Date":"Data",
     "Time":"Czas",
     "Vacation":"Urlop",
-    "Disease":"Choroba",
+    "Sick leave":"Choroba",
     "Legend":"Legenda",
     "Task type":"Rodzaje zadań"
  
