--- a/taskvenue/src/Languages/en.json
+++ b/taskvenue/src/Languages/en.json
@@ -102,7 +102,7 @@
     "Sick leave":"Sick leave",
     "Legend":"Legend",
     "Task type":"Task type",
-    "Status of the implementation of issues in the last 30 day":"Status of the implementation of issues in the last 30 day",
+    "Status of the implementation of issues in the last 30 days":"Status of the implementation of issues in the last 30 days",
     "Open Filter":"Open Filter",
     "Filter Venues":"Filter Venues",
     "Filter Tasks":"Filter Tasks",
