--- a/taskvenue/src/Languages/pl.json
+++ b/taskvenue/src/Languages/pl.json
@@ -102,7 +102,7 @@
     "Sick leave":"Choroba",
     "Legend":"Legenda",
     "Task type":"Rodzaje zadań",
-    "Status of the implementation of issues in the last 30 day":"Status realizacji zadań z ostatnich 30 dni",
+    "Status of the implementation of issues in the last 30 days":"Status realizacji zadań z ostatnich 30 dni",
     "Open Filter":"Filtry",
     "Filter Venues":"Filtry miejsc",
     "Filter Tasks":"Filtry zadań",
