added new raport open and inprogress tasks

--- a/taskvenue/src/Languages/en.json
+++ b/taskvenue/src/Languages/en.json
@@ -106,7 +106,8 @@
     "Open Filter":"Open Filter",
     "Filter Venues":"Filter Venues",
     "Filter Tasks":"Filter Tasks",
-    "Apply Filters":"Apply Filters"
+    "Apply Filters":"Apply Filters",
+    "Your open and in progress tasks":"Your open and in progress tasks"
     
   
 
