--- a/taskvenue/src/Languages/pl.json
+++ b/taskvenue/src/Languages/pl.json
@@ -106,7 +106,8 @@
     "Open Filter":"Filtry",
     "Filter Venues":"Filtry miejsc",
     "Filter Tasks":"Filtry zadań",
-    "Apply Filters":"Zastosuj filtry"
+    "Apply Filters":"Zastosuj filtry",
+    "Your open and in progress tasks":"Twoje otwarte i w trakcie realizacji zadania"
  
 
 }
