fixed noaccesslicence page

--- a/taskvenue/src/Languages/en.json
+++ b/taskvenue/src/Languages/en.json
@@ -107,7 +107,9 @@
     "Filter Venues":"Filter Venues",
     "Filter Tasks":"Filter Tasks",
     "Apply Filters":"Apply Filters",
-    "Your open and in progress tasks":"Your open and in progress tasks"
+    "Your open and in progress tasks":"Your open and in progress tasks",
+    "License expired":"License expired",
+    "Back to home page":"Back to home page"
     
   
 
