--- a/taskvenue/src/Languages/pl.json
+++ b/taskvenue/src/Languages/pl.json
@@ -107,7 +107,9 @@
     "Filter Venues":"Filtry miejsc",
     "Filter Tasks":"Filtry zadań",
     "Apply Filters":"Zastosuj filtry",
-    "Your open and in progress tasks":"Twoje otwarte i w trakcie realizacji zadania"
+    "Your open and in progress tasks":"Twoje otwarte i w trakcie realizacji zadania",
+    "License expired":"Licencja wygasła",
+    "Back to home page":"Powrót do strony głównej"
  
 
 }
