added filters by username in schedule

--- a/taskvenue/src/Languages/en.json
+++ b/taskvenue/src/Languages/en.json
@@ -109,7 +109,9 @@
     "Apply Filters":"Apply Filters",
     "Your open and in progress tasks":"Your open and in progress tasks",
     "License expired":"License expired",
-    "Back to home page":"Back to home page"
+    "Back to home page":"Back to home page",
+    "Select User":"Select User",
+    "All users":"All users"
     
   
 
