--- a/taskvenue/src/Languages/pl.json
+++ b/taskvenue/src/Languages/pl.json
@@ -109,7 +109,10 @@
     "Apply Filters":"Zastosuj filtry",
     "Your open and in progress tasks":"Twoje otwarte i w trakcie realizacji zadania",
     "License expired":"Licencja wygasła",
-    "Back to home page":"Powrót do strony głównej"
+    "Back to home page":"Powrót do strony głównej",
+    "Select User":"Wybierz użytkownika ",
+    "All users":"Wszyscy użytkownicy"
+    
  
 
 }
