updated managerNav  refers to absences

--- a/taskvenue/src/Languages/en.json
+++ b/taskvenue/src/Languages/en.json
@@ -111,7 +111,8 @@
     "License expired":"License expired",
     "Back to home page":"Back to home page",
     "Select User":"Select User",
-    "All users":"All users"
+    "All users":"All users",
+    "Absences":"Absences"
     
   
 
