--- a/taskvenue/src/Languages/pl.json
+++ b/taskvenue/src/Languages/pl.json
@@ -111,7 +111,8 @@
     "License expired":"Licencja wygasła",
     "Back to home page":"Powrót do strony głównej",
     "Select User":"Wybierz użytkownika ",
-    "All users":"Wszyscy użytkownicy"
+    "All users":"Wszyscy użytkownicy",
+    "Absences":"Absencje"
     
  
 
