added breadcrumbs to Contractor

--- a/taskvenue/src/Languages/en.json
+++ b/taskvenue/src/Languages/en.json
@@ -112,7 +112,8 @@
     "Back to home page":"Back to home page",
     "Select User":"Select User",
     "All users":"All users",
-    "Absences":"Absences"
+    "Absences":"Absences",
+    "Contractor edit":"Contractor edit"
     
   
 
