--- a/taskvenue/src/Languages/pl.json
+++ b/taskvenue/src/Languages/pl.json
@@ -112,7 +112,8 @@
     "Back to home page":"Powrót do strony głównej",
     "Select User":"Wybierz użytkownika ",
     "All users":"Wszyscy użytkownicy",
-    "Absences":"Absencje"
+    "Absences":"Absencje",
+    "Contractor edit":"Edycja kontrahenta"
     
  
 
