added Accordion in Administration

--- a/taskvenue/src/Languages/en.json
+++ b/taskvenue/src/Languages/en.json
@@ -118,7 +118,8 @@
     "User":"User",
     "Absence":"Absence",
     "Start date":"Start date",
-    "End date":"End date"
+    "End date":"End date",
+    "Add new user":"Add new user"
     
   
 
