--- a/taskvenue/src/Languages/pl.json
+++ b/taskvenue/src/Languages/pl.json
@@ -118,7 +118,8 @@
     "User":"Użytkownik",
     "Absence":"Absencja",
     "Start date":"Data rozpoczęcia",
-    "End date":"Data zakończenia"
+    "End date":"Data zakończenia",
+    "Add new user":"Dodaj nowego użytkownika"
     
  
 
