added translation to administration

--- a/taskvenue/src/Languages/en.json
+++ b/taskvenue/src/Languages/en.json
@@ -119,7 +119,10 @@
     "Absence":"Absence",
     "Start date":"Start date",
     "End date":"End date",
-    "Add new user":"Add new user"
+    "Add new user":"Add new user",
+    "Manager":"Manager",
+    "Client":"Client",
+    "Worker":"Worker"
     
   
 
