added translation in absences

--- a/taskvenue/src/Languages/en.json
+++ b/taskvenue/src/Languages/en.json
@@ -122,7 +122,9 @@
     "Add new user":"Add new user",
     "Manager":"Manager",
     "Client":"Client",
-    "Worker":"Worker"
+    "Worker":"Worker",
+    "Approved":"Approved",
+    "Rejected":"Rejected"
     
   
 
