--- a/taskvenue/src/Languages/pl.json
+++ b/taskvenue/src/Languages/pl.json
@@ -124,7 +124,8 @@
     "Client":"Klient",
     "Worker":"Pracownik",
     "Approved":"Zatwierdzony",
-    "Rejected":"Odrzucony"
+    "Rejected":"Odrzucony",
+    "About configuration":"Informacje o konfiguracji"
     
  
 
