added new absence from schedule

--- a/taskvenue/src/Languages/en.json
+++ b/taskvenue/src/Languages/en.json
@@ -125,7 +125,9 @@
     "Worker":"Worker",
     "Approved":"Approved",
     "Rejected":"Rejected",
-    "About configuration":"About configuration"
+    "About configuration":"About configuration",
+    "Add absence":"Add absence",
+    "Add task":"Add task"
     
   
 
