--- a/taskvenue/src/Languages/pl.json
+++ b/taskvenue/src/Languages/pl.json
@@ -60,10 +60,10 @@
     "Name or company name":"Imię i nazwisko lub nazwa firmy",
     "Blocked":"Zablokowany",
     "Select Contractor":"Wybór kontrahenta",
-    "Copy the ID and deliver to your administrator to add you to the appropriate configuration":"Skopiuj ID oraz dostarcz do twojego administratora w celu dodania Cię do odpowiedniej konfiguracjin",
+    "Copy the ID and deliver to your administrator to add you to the appropriate configuration":"Skopiuj ID oraz dostarcz do twojego administratora w celu dodania Cię do odpowiedniej konfiguracji",
     "Copy":"Kopiuj",
     "User ID":"User ID",
-    "your identifier is ":"Twoj identyfikator to",
+    "Hi, your ID can be found below":"Cześć, twój identyfikator znajduje się poniżej",
     "Contractor":"Kontrahent",
     "Search by name":"Wyszukaj po nazwie",
     "Search by number":"Wyszukaj po numerze",
