--- a/taskvenue/src/Languages/pl.json
+++ b/taskvenue/src/Languages/pl.json
@@ -138,7 +138,8 @@
         "tie": "Remis!",
         "playerWins": "Wygrałeś!",
         "computerWins": "Komputer wygrał."
-      }
+      },
+      "Incorrect dates":"Niepoprawne daty"
     
  
 
