--- a/taskvenue/src/Languages/en.json
+++ b/taskvenue/src/Languages/en.json
@@ -142,7 +142,9 @@
       "Incorrect dates":"Incorrect dates",
       "Date from : ":"Date from : ",
       "Date to : ":"Date to : ",
-      "Report realization of issues for the customers [only completed]":"Report realization of issues for the customers [only completed]"
+      "Report realization of issues for the customers [only completed]":"Report realization of issues for the customers [only completed]",
+      "Amount of tasks":"Amount of tasks"
+      
 
 
    
