--- a/taskvenue/src/Languages/en.json
+++ b/taskvenue/src/Languages/en.json
@@ -143,7 +143,8 @@
       "Date from : ":"Date from : ",
       "Date to : ":"Date to : ",
       "Report realization of issues for the customers [only completed]":"Report realization of issues for the customers [only completed]",
-      "Amount of tasks":"Amount of tasks"
+      "Amount of tasks":"Amount of tasks",
+      "Language":"Language"
       
 
 
