--- a/taskvenue/src/Languages/pl.json
+++ b/taskvenue/src/Languages/pl.json
@@ -143,7 +143,8 @@
       "Date from : ":"Data od : ",
       "Date to : ":"Data do : ",
       "Report realization of issues for the customers [only completed]":"Raportowanie realizacji spraw dla klientów [tylko zakończone]",
-      "Amount of tasks":"Ilość zadań"
+      "Amount of tasks":"Ilość zadań",
+      "Language":"Język"
     
  
 
