small translation change

--- a/taskvenue/src/Languages/pl.json
+++ b/taskvenue/src/Languages/pl.json
@@ -142,7 +142,7 @@
       "Incorrect dates":"Niepoprawne daty",
       "Date from : ":"Data od : ",
       "Date to : ":"Data do : ",
-      "Report realization of issues for the customers [only completed]":"Raportowanie realizacji spraw dla klientów [tylko zakończone]",
+      "Report realization of issues for the customers [only completed]":"Raportowanie realizacji zadań dla klientów [tylko zakończone]",
       "Amount of tasks":"Ilość zadań",
       "Language":"Język"
     
