added worker routing

--- a/taskvenue/src/Languages/pl.json
+++ b/taskvenue/src/Languages/pl.json
@@ -14,7 +14,7 @@
     "Profile": "Profil",
     "Administration": "Administracja",
     "Venues": "Miejsca",
-    "Schedule": "Planowanie",
+    "Schedule": "Harmonogram",
     "Tasks": "Zadania",
     "Reports": "Raporty",
     "Home": "Strona główna",
