added absence dashboard view

--- a/taskvenue/src/Languages/en.json
+++ b/taskvenue/src/Languages/en.json
@@ -144,7 +144,8 @@
       "Date to : ":"Date to : ",
       "Report realization of issues for the customers [only completed]":"Report realization of issues for the customers [only completed]",
       "Amount of tasks":"Amount of tasks",
-      "Language":"Language"
+      "Language":"Language",
+      "Search by User":"Search by User"
       
 
 
