--- a/taskvenue/src/Languages/pl.json
+++ b/taskvenue/src/Languages/pl.json
@@ -144,7 +144,8 @@
       "Date to : ":"Data do : ",
       "Report realization of issues for the customers [only completed]":"Raportowanie realizacji zadań dla klientów [tylko zakończone]",
       "Amount of tasks":"Ilość zadań",
-      "Language":"Język"
+      "Language":"Język",
+      "Search by User":"Wyszukaj pracownika"
     
  
 
